# py-rest

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  celery.Dockerfile  docker-compose.yml  fastAPI.Dockerfile  pylintrc  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker-image.yml  pre-commit.yaml  pylint.yml  unittest.yaml
app/: celery.py  main.py
app/configs/: configs.py
app/core/utils/: elasticsearch.py  logging.py  mongodb.py
app/routes/: helath.py
tests/: test_sample.py
