[tool.poetry]
name = "py-rest"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.1"
amqp = "5.2.0"
annotated-types = "0.6.0"
anyio = "4.3.0"
appdirs = "1.4.4"
asgi-lifespan = "2.1.0"
astroid = "3.0.3"
asttokens = "2.4.1"
async-timeout = "4.0.3"
attrs = "23.2.0"
autopep8 = "2.0.4"
bcrypt = "4.1.2"
billiard = "4.2.0"
boto3 = "1.34.49"
botocore = "1.34.49"
build = "1.1.1"
cachecontrol = "0.14.0"
celery = "5.3.6"
celery-redbeat = "2.2.0"
certifi = "2024.2.2"
cffi = "1.16.0"
cfgv = "3.4.0"
charset-normalizer = "3.3.2"
rapidfuzz = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
